<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aaron.noassemblyrequired.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/patio"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/patio"
                app:srcCompat="@drawable/patio"
                tools:layout_editor_absoluteX="128dp"
                tools:layout_editor_absoluteY="439dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:text="@string/dresser"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/dresser"
                app:srcCompat="@drawable/dresser"
                tools:layout_editor_absoluteX="188dp"
                tools:layout_editor_absoluteY="186dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:text="@string/bicycle"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/bicycle"
                android:paddingBottom="10sp"
                app:srcCompat="@drawable/bicycle"
                tools:layout_editor_absoluteX="128dp"
                tools:layout_editor_absoluteY="16dp" />

            <Button
                android:id="@+id/btn"
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:elevation="0dp"
                android:padding="18sp"
                android:text="@string/button"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:targetApi="lollipop" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
